syntax = "proto3";
package neutron.crypto.v1beta1.ethsecp256k1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/neutron-org/neutron/v8/x/crypto/ethsecp256k1";

// PubKey defines a type alias for an ecdsa.PublicKey that implements
// Tendermint's PubKey interface. It represents the 33-byte compressed public
// key format.
message PubKey {
  option (amino.name) = "eth/PubKeyEthSecp256k1";
  option (gogoproto.goproto_stringer) = false;

  bytes key = 1;
}

// PrivKey defines a type alias for an ecdsa.PrivateKey that implements
// Tendermint's PrivateKey interface.
message PrivKey {
  option (amino.name) = "eth/PrivKeyEthSecp256k1";

  bytes key = 1;
}
